fixed media query for randall section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,8 @@
             </ul>
         </div>
     </section>    
+
+
     <section class="about-section">
         <h2>Scholarship Auditions brings multiple resources and opportunities to middle school, high school, and collegiate performing arts students, along with the institutions and associations that support these students.</h2>
     </section>
@@ -33,45 +35,56 @@
             <a href="/founder"><img src="/images/randallfounder.png"></a>
         </div>
         <div class="cta-right">
-            <div style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px; font-size: 3.3em;">Scholarship Auditions: Visionary Pioneers</div>
-            <br>
-            <p class="cta-right-info">Our online platform empowers scholastic performing arts students, guiding them through the intricate journey of application, audition, and scholarship attainment while seamlessly connecting them with collegiate music recruiters.</p>
-            <br>
-            <div class="cta-smallbox">
-                <div class="cta-smallbox-text">
-                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Valued</h2>
-                    <p>by Students and Parents</p>
-                </div>
-                <div class="cta-smallbox-img">
-                    <img src="/images/icon11.png">
-                </div>
+            <div style="margin-left: 5px; font-size: 3.3em; width: 100%; text-align: center;">
+                <div class="cta-right-top" style=" opacity:0.2; line-height: 0.6;">Scholarship Auditions</div>
+                <div  class="cta-right-heading" style="text-shadow: 3px 3px 5px grey; color: #ecad34; font-size: 1.5em;  width: 100%; font-weight: 500;">Visionary Pioneers</div>
             </div>
-           
-            <div class="cta-smallbox" style="justify-content: space-around;">
-                <div class="cta-smallbox-img middle">
-                    <img src="/images/icon22.png">
+            <br>
+            <p class="cta-right-info">Our online platform empowers scholastic performing
+                 arts students, guiding them through the intricate journey of application,
+                  audition, and scholarship attainment while seamlessly connecting them with
+                   collegiate music recruiters.</p>
+            <br>
+            <div style="display: flex; flex-direction: column;">
+                <div class="cta-smallbox">
+                    <div class="cta-smallbox-text">
+                        <h2 id= "text1" style="text-shadow: 3px 3px 2px rgba(128, 128, 128, 0.678); 
+                        color: #ecad34; margin-left: 5px;">Valued</h2>
+                        <p>by Students and Parents</p>
+                    </div>
+                    <div class="cta-smallbox-img">
+                        <img src="/images/icon11.png">
+                    </div>
                 </div>
-                <div class="cta-smallbox-text">
-                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Trusted</h2>
-                    <p>by Scholastic Music Educators</p>
+                <div class="cta-smallbox">
+                    <div class="cta-smallbox-img middle">
+                        <img src="/images/icon22.png">
+                    </div>
+                    <div class="cta-smallbox-text">
+                        <h2 id = "text2" style="text-shadow: 3px 3px 2px rgba(128, 128, 128, 0.678); 
+                        color: #ecad34; margin-left: 5px;">Trusted</h2>
+                        <p>by Scholastic Music Educators</p>
+                    </div>
                 </div>
-            </div>
-          
-            <div class="cta-smallbox">
-                <div class="cta-smallbox-text">
-                    <h2 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 8px;">Esteemed</h2>
-                    <p>by Collegiate School of Music Recruiters</p>
-                </div>
-                <div class="cta-smallbox-img">
-                    <img src="/images/icon33.png">
+                <div class="cta-smallbox">
+                    <div class="cta-smallbox-text">
+                        <h2 id="text3" style="text-shadow: 3px 3px 2px rgba(128, 128, 128, 0.678); 
+                        color: #ecad34; margin-left: 8px;">Esteemed</h2>
+                        <p>by Collegiate School of Music Recruiters</p>
+                    </div>
+                    <div class="cta-smallbox-img" id="img3">
+                        <img src="/images/icon33.png">
+                    </div>
                 </div>
             </div>
             <br>
             <h4 style="text-align: right !important; font-size: 2.3rem;"><a style="text-align: right !important; color: black;" href="/about">See more...</a></h4>
         </div>
     </section>
+
+
     <section class="stats-section">
-        <h1>Reaching</h1>
+        <h1 style="letter-spacing: 2px;">Reaching</h1>
         <br>
         <div class="stats">
             <div class="stat">
@@ -108,6 +121,7 @@
     </section>
     <br>
 
+
     <section>
         <h1 style="font-size: 5rem; font-weight: 800; color:black;">Our Portfolio</h1>
         <h2 style="color:black;">Our Offerings</h2>
@@ -117,6 +131,7 @@
                     <img src="/images/accoladi.png" alt="Accoladi">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">Accoladi</div>
                     <p style="text-align: center;">An online matching platform connecting aspiring music majors and collegiate performers with school of music recruiters, serving as a comprehensive resource for the entire application, audition, scholarship and acceptance process.</p>
                     <a href="https://www.accoladi.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
@@ -127,6 +142,7 @@
                     <img src="/images/nsjrma.png" alt="NSMA Jr">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">NSMA Jr.</div>
                     <p style="text-align: center;">An online awards system for middle school music students, mirroring honor ensemble audition requirements.</p>
                     <a href="https://www.nationalscholasticjuniormusiciansawards.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
@@ -137,8 +153,8 @@
                     <img src="/images/director-letters.png" alt="Director Letters">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">A compilation of tailored topic-specific letters addressing the distinct communication requirements of music educators.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">Director Letters</div>
+                    <p style="text-align: center;">A compilation of tailored topic-specific letters addressing the distinct communication requirements of music educators.</p>
                     <a href="http://www.directorletters.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
 
@@ -149,6 +165,7 @@
                     <img src="/images/my-music-future.png" alt="My Music Future">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">My Music Future</div>
                     <p style="text-align: center;">An aptitude assessment to assist students in determining their suitability for a music career and identifying their ideal music-related path.</p>
                     <a href="https://www.mymusicfuture.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
@@ -159,6 +176,7 @@
                     <img src="/images/between-bands.png" alt="Between Bands">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">Between Bands</div>
                     <p style="text-align: center;">An interactive edutainment website designed for marching band fans.</p>
                     <a href="" target="_blank"><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
@@ -169,8 +187,8 @@
                     <img src="/images/honor-ensemble-conductors.png" alt="Honor Ensemble Conductors">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">The central hub linking elite conductors with global honor ensemble organizers.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">Honor Ensemble Conductors</div>
+                    <p style="text-align: center;">The central hub linking elite conductors with global honor ensemble organizers.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
@@ -180,8 +198,8 @@
                     <img src="/images/nsma.png" alt="NSMA">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">A comprehensive online awards system for high school music students, closely mirroring collegiate audition standards.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">NSMA</div>
+                    <p style="text-align: center;">A comprehensive online awards system for high school music students, closely mirroring collegiate audition standards.</p>
                     <a href="https://www.nationalscholasticmusiciansawards.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
@@ -191,6 +209,7 @@
                     <img src="/images/music-city-bowl-band.png" alt="Music City Bowl Band">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">Music City Bowl Band</div>
                     <p style="text-align: center;">The online community for high school and college marching band members who will form the annual USA Festival Marching Band performing at the Music City Bowl in Nashville, Tennessee.</p>
                     <a href="https://www.musiccitybowlband.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
@@ -198,6 +217,7 @@
         </div>
         <div class="clearfix"></div>
     </section>
+
 
     <section>
         <h2 style="color:black;">Future Offerings</h2>
@@ -207,8 +227,8 @@
                     <img src="/images/hollywood-sightreading.png" alt="Hollywood Sightreading">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">A methodical platform empowering academic musicians to excel in precision and artistry in sightreading, while performing alongside renowned Hollywood movie session soundtrack orchestras.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">Hollywood Sightreading</div>
+                    <p style="text-align: center;">A methodical platform empowering academic musicians to excel in precision and artistry in sightreading, while performing alongside renowned Hollywood movie session soundtrack orchestras.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
@@ -217,8 +237,8 @@
                     <img src="/images/between-choirs.png" alt="Between Choirs">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">An engaging edutainment website tailored for show choir enthusiasts.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">Between Choirs</div>
+                    <p style="text-align: center;">An engaging edutainment website tailored for show choir enthusiasts.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
@@ -227,8 +247,8 @@
                     <img src="/images/american-band-dad.png" alt="American Band Dad" width="600" height="400">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <p style="text-align: center;">The central hub for whimsical edutainment podcasts featuring fictional Wendell Bud McFarland, who humorously assumes the role of National President of the American Band Dad Association.
-                    </p>
+                    <div style="font-size: 3rem; font-weight: bold;">American Band Dad</div>
+                    <p style="text-align: center;">The central hub for whimsical edutainment podcasts featuring fictional Wendell Bud McFarland, who humorously assumes the role of National President of the American Band Dad Association.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
@@ -237,6 +257,7 @@
                     <img src="/images/profet.png" alt="Profet" width="600" height="400">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
+                    <div style="font-size: 3rem; font-weight: bold;">Profet</div>
                     <p style="text-align: center;">A precise assessment tool enabling high school music students to forecast their ideal collegiate music journey, aligning with the career aspirations, performance history, and musical proficiency as aspiring music majors.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
@@ -305,6 +326,7 @@
     </section>
 </main>
 
+
 <script>
     function animateCounter(targetCount, duration, elementId) {
       const countElement = document.getElementById(elementId);
@@ -331,6 +353,8 @@
       animateCounter(37650, 5, 'count4');   // Count up to 37,650 in 5 seconds on page load
     });
 </script>
+
+
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         const carousel = document.querySelector('[data-carousel]');
@@ -351,6 +375,8 @@
         setInterval(nextSlide, 4000);
     });
 </script>
+
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const buttons = document.querySelectorAll("[data-carousel-button]")
