--- a/views/intern.ejs
+++ b/views/intern.ejs
@@ -3,7 +3,7 @@
 <main class="intern-main" style="border: deepskyblue 3px solid; margin: 0 4.1rem; margin-top: 10rem;">
     <section style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
         <img src="/images/gradcap.png" class="grad-cap" style="width: 25rem; height: 15rem; margin: 0 3rem; transform: scaleX(-1);        ">
-        <div style="border: #ecad34 solid 1rem; background-color: #12151d; padding: 2rem; max-width: 500rem; width: 100%; margin-bottom: 2rem;">
+        <div style="border: #ecad34 solid 1rem; background-color: #121629; padding: 2rem; max-width: 500rem; width: 100%; margin-bottom: 2rem;">
             <h1 style="font-size: 3.8rem; font-weight: 700; text-align: center; color: white;">Internship Program at Scholarship Auditions</h1>
         </div>
         <img src="/images/gradcap.png" class="grad-cap" style="width: 25rem; height: 15rem; margin: 0 3rem;">
@@ -29,7 +29,7 @@
             leave us with invaluable reflections:</p>
     </section>
 
-    <section style="background-color: rgb(18 22 41); margin: 4rem -4.4rem; padding: 0 4rem;">
+    <section style="background-color: #121629; margin: 4rem -4.4rem; padding: 0 4rem;">
         <div style="border: deepskyblue 3px solid; border-top: none; border-bottom: none;">
             <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-around; padding-top: 5rem; justify-content: center; align-items: center;">
                 <div style="max-width: 600px; width: 100%; margin:1rem; padding: 1rem; color: white; text-align: center; ">
