--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: #12151d;
+  background-color: #121629;
   position: sticky;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #ecad34;
@@ -126,7 +126,7 @@ h1 {
   .menu {
     position: absolute;
     top: 0;
-    margin-top: 80px;
+    margin-top: 100px;
     left: 0;
     flex-direction: column;
     width: 100%;
@@ -333,7 +333,7 @@ footer{
 /*--------------About Section------------------*/
 
 .about-section{
-    background-color: #12151d;
+    background-color: #121629;
     margin: 0rem 0rem;
     padding: 7rem;
     margin-bottom: -1.9rem;
@@ -341,6 +341,16 @@ footer{
 
 .about-section h2 {
     color: #ecad34;
+}
+
+@media screen and (max-width: 650px) {
+    .about-section {
+        padding: 2rem;
+        text-align: center;
+    }
+    .about-section h2 {
+        font-size: 2em;
+    }
 }
 
 /*--------------Stats Section------------------*/
@@ -432,13 +442,11 @@ footer{
     margin: 2rem;
 }
 
-
-
 .cta-smallbox{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around !important;
+    justify-content: space-evenly !important;
     width: 100%;
     margin: 1rem;
 }
@@ -452,16 +460,32 @@ footer{
     .cta-right-info {
         font-size: 1.5rem;
     }
+    .cta-right-heading {
+        font-size: 0.8em;
+    }
     .cta-smallbox {
         margin: 0;
+        width: 5rem;
     }
-    .cta-smallbox-img {
-        width: 15rem;
-        height: 15rem;
-        margin-top: 6rem;
+    .cta-smallbox-img img{
+        width: 10rem;
+        height: 10rem;
     }
     .cta-smallbox p {
         font-size: 1.5rem;
+    }
+    #text1, #text3 {
+        margin-right: 6rem;
+    }
+    #img3 {
+        margin-top: 2rem;
+    }
+    .cta-right {
+        display: flex;
+        flex: column;
+    }
+    .cta-right-top {
+        line-height: 1;
     }
 }
 
@@ -526,7 +550,7 @@ footer{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: #12151d;
+    background-color: #121629;
     color: white;
     margin: 6rem 0rem;
     padding-top: 10rem;
@@ -685,7 +709,7 @@ footer{
 .founder-rtitle{
     max-width: 630px;
     width: 99%;    
-    background-color: #12151d;
+    background-color: #121629;
     text-align: center;
     color: white;
     border: 1rem solid #ecad34;
@@ -1064,7 +1088,7 @@ img{
 .responsive1 .overlay-content {
     width: 100%;
     height: 100%;
-    background-color: #12151d;
+    background-color: #121629;
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
