media query changes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -187,7 +187,7 @@
                     <img src="/images/honor-ensemble-conductors.png" alt="Honor Ensemble Conductors">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <div style="font-size: 3rem; font-weight: bold;">Honor Ensemble Conductors</div>
+                    <div style="font-size: 3rem; font-weight: bold; text-align: center;">Honor Ensemble Conductors</div>
                     <p style="text-align: center;">The central hub linking elite conductors with global honor ensemble organizers.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
