--- a/views/research-influencers.ejs
+++ b/views/research-influencers.ejs
@@ -17,7 +17,7 @@
         <p>But it doesn't stop at research. Our Research Influencers are fervent advocates for the significance of music education and the performing arts within schools and communities. They champion the cause, raising awareness and rallying support for the bright talents pursuing their dreams in these fields. <br> At ScholarshipAuditions.com, we believe in the power of knowledge, the harmony of innovation, and the melody of advocacy. Our Research Influencers embody these principles, standing as beacons of inspiration, guiding the next generation of musicians towards a future filled with promise and possibility.</p>
     </section>
     <section class="ri-page-right">
-        <h1 style="text-align: center;">Special Projects Envisioned By: <br>Scholarship Audition's <br>Research Influencers</h1>
+        <h1 style="text-align: center; font-weight: bold; color: rgb(247, 242, 242)">Special Projects Envisioned By: <br>Scholarship Audition's <br>Research Influencers</h1>
         <br>
         <br>
         <h3>The Professionalism of Collegiate Music Recruiting</h3>
