--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,6 +52,7 @@ h1 {
   padding-top: 3em;
   padding-bottom: 3em;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(25, 24, 24, 0.3) 0px 7px 13px -3px, rgba(30, 29, 29, 0.2) 0px -3px 0px inset;
+  z-index: 5;
 }
 
 .menu {
@@ -118,6 +119,7 @@ h1 {
 }
 
 @media (max-width: 700px) {
+
   .menu-button-container {
     display: flex;
     padding-right: 3rem;
@@ -330,6 +332,12 @@ footer{
     width: 50%;
 }
 
+@media screen and (max-width: 667px) {
+    .hero-text {
+        visibility:  hidden;
+    }
+}
+
 /*--------------About Section------------------*/
 
 .about-section{
@@ -486,6 +494,7 @@ footer{
     }
     .cta-right-top {
         line-height: 1;
+        margin-bottom: 2rem;
     }
 }
 
@@ -541,7 +550,11 @@ footer{
     min-width: 55%;
 }
 
-
+@media screen and (max-width: 667px) {
+    .overlay-content p {
+        padding: 4px;
+    }
+}
 
 /*--------------Intern Section------------------*/
 
@@ -702,7 +715,7 @@ footer{
 
 @media only screen and (max-width: 800px) {
     .founder-ltitle h1 {
-        font-size: 6rem;
+        font-size: 5rem;
     }
 }
 
@@ -724,7 +737,7 @@ footer{
 
 @media only screen and (max-width: 800px) {
     .founder-rtitle h3 {
-        font-size: 3rem;
+        font-size: 2rem;
         margin: 1rem;
     }
   }
@@ -897,6 +910,12 @@ img{
 @media screen and (max-width: 1277px) {
     .contact-left {
         display: none;
+    }
+
+    .main-contact-section{
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-top: 5rem;
     }
 }
 
